--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,5 +5,17 @@
     display: flex;
     margin: 0 auto;
     padding: 45px 0 41px 0;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid #5454544d;
+}
+
+@media screen and (max-width: 1279px) {
+    .header {
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        max-width: 100%;
+    }
 }
