--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,4 +3,11 @@
     min-height: 33px;
     width: 100%;
     background-image: url(../../images/logo.svg);
+    background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 767px) {
+    .logo {
+        margin: 0 0 0 27px;
+    }
 }
