--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,37 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
+
+@import url(../blocks/content/content.css);
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__wrapper/profile__wrapper.css);
+@import url(../blocks/avatar/avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__text/profile__text.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__nickname/profile__nickname.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__target/profile__target.css);
+
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__mask/card__mask.css);
+@import url(../blocks/card/__description/card__description.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like/card__like.css);
+/* @import url(../blocks/card/__like/_active/card__like_active.css); */
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyrights/footer__copyrights.css);
+
+@import url(../blocks/overlay/overlay.css);
+@import url(../blocks/overlay/__hidden/overlay__hidden.css);
+@import url(../blocks/edit-form/edit-form.css);
+@import url(../blocks/edit-form/__close/edit-form__close.css);
+@import url(../blocks/edit-form/__wrapper/edit-form__wrapper.css);
+@import url(../blocks/edit-form/__title/edit-form__title.css);
+@import url(../blocks/edit-form/__name/edit-form__name.css);
+@import url(../blocks/edit-form/__nickname/edit-form__nickname.css);
+@import url(../blocks/edit-form/__submit/edit-form__submit.css);
