--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,7 +2,14 @@
     width: 100%;
     margin: 47px auto 0 auto;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px 17px;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px) {
+    .cards {
+        margin-top: 36px;
+    }
 }
