--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,4 +3,20 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 1279px) {
+    .content {
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .content {
+        max-width: 88%;
+        margin: 0 auto;
+    }
 }
