--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -18,3 +18,10 @@
 .profile__add-button:hover {
     opacity: .4;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__add-button {
+        max-width: 100%;
+        margin-top: 36px;
+    }
+}
