--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,3 +17,9 @@
 .profile__edit-button:hover {
     opacity: .4;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__edit-button {
+        margin-bottom: 5px;
+    }
+}
