--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,9 @@
     row-gap: 16px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__info {
+        align-items: center;
+    }
+}
