type: correction popup

--- a/blocks/edit-form/__submit/edit-form__submit.css
+++ b/blocks/edit-form/__submit/edit-form__submit.css
@@ -16,3 +16,10 @@
 .edit-form__submit:hover {
     opacity: .8;
 }
+
+@media screen and (max-width: 767px) {
+    .edit-form__submit {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
