--- a/blocks/edit-form/__close/edit-form__close.css
+++ b/blocks/edit-form/__close/edit-form__close.css
@@ -30,3 +30,16 @@
 .edit-form__close:hover {
     opacity: .4;
 }
+
+@media screen and (max-width: 767px) {
+    .edit-form__close {
+        width: 20px;
+        height: 20px;
+    }
+
+    .edit-form__close::after,
+    .edit-form__close::before {
+        width: 20px;
+        top: 9px;
+    }
+}
