--- a/blocks/edit-form/__title/edit-form__title.css
+++ b/blocks/edit-form/__title/edit-form__title.css
@@ -3,3 +3,10 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 767px) {
+    .edit-form__title {
+        font-size: 18px;
+        line-height: 21px;
+    }
+}
