--- a/blocks/edit-form/__wrapper/edit-form__wrapper.css
+++ b/blocks/edit-form/__wrapper/edit-form__wrapper.css
@@ -10,3 +10,10 @@
     padding: 34px 36px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 767px) {
+    .edit-form__wrapper {
+        max-width: 282px;
+        padding: 25px 22px;
+    }
+}
