--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -5,3 +5,17 @@
     top: 29%;
     left: 35%;
 }
+
+@media screen and (max-width: 1279px) {
+    .edit-form {
+        left: 24%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .edit-form {
+        max-width: 282px;
+        left: 0;
+        margin: 0 19px;
+    }
+}
