--- a/blocks/edit-form/__close/edit-form__close.css
+++ b/blocks/edit-form/__close/edit-form__close.css
@@ -1,11 +1,9 @@
 .edit-form__close {
     width: 32px;
     height: 32px;
-    position: absolute;
-    top: -40px;
-    right: 0;
     cursor: pointer;
     transition: .5s ease;
+    margin: 0 0 -8px auto;
 }
 
 .edit-form__close::after,
@@ -13,7 +11,6 @@
     content: '';
     display: block;
     position: absolute;
-    top: 15px;
     width: 32px;
     height: 3px;
     background: #fff;
@@ -35,11 +32,11 @@
     .edit-form__close {
         width: 20px;
         height: 20px;
+        margin: 0 0 0 auto;
     }
 
     .edit-form__close::after,
     .edit-form__close::before {
         width: 20px;
-        top: 9px;
     }
 }
