--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -1,21 +1,23 @@
 .edit-form {
-    max-width: 470px;
+    max-width: 500px;
     width: 100%;
-    position: fixed;
-    top: 29%;
-    left: 35%;
-}
-
-@media screen and (max-width: 1279px) {
-    .edit-form {
-        left: 24%;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    min-height: 100vh;
 }
 
 @media screen and (max-width: 767px) {
     .edit-form {
-        max-width: 282px;
-        left: 0;
-        margin: 0 19px;
+        max-width: 330px;
+    }
+}
+
+@media screen and (max-width: 321px) {
+    .edit-form {
+        max-width: 88%;
+        align-items: flex-end;
     }
 }
