--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -1,6 +1,6 @@
 .overlay {
-    /* opacity: 0;
-    visibility: hidden; */
+    opacity: 1;
+    visibility: visible;
     display: block;
     position: fixed;
     top: 0;
@@ -8,4 +8,6 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .5);
+    transition: .9s ease;
+    z-index: 100;
 }
