--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,6 +1,6 @@
 .card__title {
     max-width: 195px;
-    font: 900 24px/29px 'Inter', sans-serif;
+    font: 900 24px/29px 'Inter', 'Arial', sans-serif;
     color: #000;
     text-overflow: ellipsis;
     white-space: nowrap;
