--- a/blocks/edit-form/__close/edit-form__close.css
+++ b/blocks/edit-form/__close/edit-form__close.css
@@ -1,42 +1,32 @@
 .edit-form__close {
-    width: 32px;
-    height: 32px;
+    min-width: 32px;
+    min-height: 32px;
     cursor: pointer;
     transition: .5s ease;
-    margin: 0 0 -8px auto;
-}
-
-.edit-form__close::after,
-.edit-form__close::before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 32px;
-    height: 3px;
-    background: #fff;
-}
-
-.edit-form__close::after {
-    transform: rotate(45deg);
-}
-
-.edit-form__close::before {
-    transform: rotate(-45deg);
+    margin: 0 0 8px auto;
+    background-image: url(../../../images/closeIcon.svg);
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-size: contain;
+    background-color: transparent;
+    border: 0;
 }
 
 .edit-form__close:hover {
-    opacity: .4;
+    opacity: .6;
 }
 
 @media screen and (max-width: 767px) {
     .edit-form__close {
-        width: 20px;
-        height: 20px;
-        margin: 0 0 0 auto;
+        min-width: 24px;
+        min-height: 24px;
     }
+}
 
-    .edit-form__close::after,
-    .edit-form__close::before {
-        width: 20px;
+@media screen and (max-width: 321px) {
+    .edit-form__close {
+        min-width: 20px;
+        min-height: 20px;
+        margin: 0 0 16px 0;
     }
 }
