--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -4,10 +4,18 @@
     width: 100%;
     background-image: url(../../images/logo.svg);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 @media screen and (max-width: 767px) {
     .logo {
         margin: 0 0 0 27px;
+    }
+}
+
+@media screen and (max-width: 321px) {
+    .logo {
+        max-width: 103px;
+        min-height: 24px;
     }
 }
