--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,7 @@
     max-width: 150px;
     width: 100%;
     min-height: 50px;
-    background-color: #000;
+    background-color: transparent;
     border: 2px solid #fff;
     border-radius: 2px;
     display: flex;
@@ -10,18 +10,23 @@
     align-items: center;
     padding: 0;
     margin: 0;
-    position: relative;
     transition: .5s ease;
     cursor: pointer;
+    background-image: url(../../../images/add.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 14px 64px;
+    box-sizing: border-box;
 }
 
 .profile__add-button:hover {
-    opacity: .4;
+    opacity: .6;
 }
 
 @media screen and (max-width: 767px) {
     .profile__add-button {
         max-width: 100%;
         margin-top: 36px;
+        padding: 17px 132px;
     }
 }
