--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,20 +6,31 @@
     width: 100%;
     min-height: 24px;
     border: 1px solid #fff;
-    background-color: #000;
-    padding: 6px;
+    background-color: transparent;
+    padding: 7px;
     margin: 0 0 9px 0;
     box-sizing: border-box;
     cursor: pointer;
     transition: .5s ease;
+    background-image: url(../../../images/edit.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .profile__edit-button:hover {
-    opacity: .4;
+    opacity: .6;
 }
 
 @media screen and (max-width: 767px) {
     .profile__edit-button {
         margin-bottom: 5px;
+        padding: 5px;
+    }
+}
+
+@media screen and (max-width: 321px) {
+    .profile__edit-button {
+        max-width: 18px;
+        min-height: 18px;
     }
 }
