--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -7,3 +7,9 @@
     column-gap: 18px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__text {
+        max-width: 282px;
+    }
+}
