fix/form-classes

--- a/blocks/form/__element/form__element.css
+++ b/blocks/form/__element/form__element.css
@@ -1,4 +1,4 @@
-.edit-form__element {
+.form__element {
     padding: 0 0 13px 0;
     margin: 54px 0 0 0;
     font: normal 14px/17px 'Inter', sans-serif;
