--- a/blocks/form-wrapper/form-wrapper.css
+++ b/blocks/form-wrapper/form-wrapper.css
@@ -1,4 +1,4 @@
-.edit-form {
+.form-wrapper {
     max-width: 500px;
     width: 100%;
     display: flex;
@@ -11,13 +11,13 @@
 }
 
 @media screen and (max-width: 767px) {
-    .edit-form {
+    .form-wrapper {
         max-width: 330px;
     }
 }
 
 @media screen and (max-width: 321px) {
-    .edit-form {
+    .form-wrapper {
         max-width: 88%;
         align-items: flex-end;
     }
