--- a/blocks/form/__close/form__close.css
+++ b/blocks/form/__close/form__close.css
@@ -1,4 +1,4 @@
-.edit-form__close {
+.form__close {
     min-width: 32px;
     min-height: 32px;
     cursor: pointer;
@@ -12,19 +12,19 @@
     border: 0;
 }
 
-.edit-form__close:hover {
+.form__close:hover {
     opacity: .6;
 }
 
 @media screen and (max-width: 767px) {
-    .edit-form__close {
+    .form__close {
         min-width: 24px;
         min-height: 24px;
     }
 }
 
 @media screen and (max-width: 321px) {
-    .edit-form__close {
+    .form__close {
         min-width: 20px;
         min-height: 20px;
         margin: 0 0 16px 0;
