--- a/pages/index.css
+++ b/pages/index.css
@@ -31,9 +31,9 @@
 
 @import url(../blocks/overlay/overlay.css);
 @import url(../blocks/overlay/_hidden/overlay_hidden.css);
-@import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/__close/edit-form__close.css);
-@import url(../blocks/edit-form/__wrapper/edit-form__wrapper.css);
-@import url(../blocks/edit-form/__title/edit-form__title.css);
-@import url(../blocks/edit-form/__element/edit-form__element.css);
-@import url(../blocks/edit-form/__submit/edit-form__submit.css);
+@import url(../blocks/form-wrapper/form-wrapper.css);
+@import url(../blocks/form/__close/form__close.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/__element/form__element.css);
+@import url(../blocks/form/__submit/form__submit.css);
