feature/six-cards

--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -1,7 +1,7 @@
 .overlay {
     opacity: 1;
     visibility: visible;
-    display: block;
+    display: flex;
     position: fixed;
     top: 0;
     right: 0;
