--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,12 +1,15 @@
 .card {
     max-width: 282px;
     width: 100%;
+    max-height: 361px;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
     box-sizing: border-box;
+    position: relative;
 }
 
 @media screen and (max-width: 1279px) {
