--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -2,6 +2,8 @@
     opacity: 1;
     visibility: visible;
     display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     top: 0;
     right: 0;
