--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
     min-height: 24px;
     border: 1px solid #fff;
     background-color: transparent;
-    padding: 7px;
+    padding: 0;
     margin: 0 0 9px 0;
     box-sizing: border-box;
     cursor: pointer;
