--- a/pages/index.css
+++ b/pages/index.css
@@ -38,6 +38,7 @@
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__element/form__element.css);
 @import url(../blocks/form/__submit/form__submit.css);
+@import url(../blocks/form/__submit/_disabled/form__submit_disabled.css);
 
 @import url(../blocks/popup-wrapper/_image/popup-wrapper__image.css);
 @import url(../blocks/popup/popup.css);
