--- a/blocks/form/__element/form__element.css
+++ b/blocks/form/__element/form__element.css
@@ -4,4 +4,9 @@
     font: normal 14px/17px 'Inter', sans-serif;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
+    outline: none;
+}
+
+.form__element:invalid {
+    border-bottom: 1px solid #FF0000;
 }
