--- a/blocks/form/__submit/_disabled/form__submit_disabled.css
+++ b/blocks/form/__submit/_disabled/form__submit_disabled.css
@@ -3,4 +3,9 @@
     background-color: #fff;
     color: #000;
     border: 1px solid #000;
+    cursor: default;
+}
+
+.form__submit .form__submit_disabled:hover {
+    opacity: .2;
 }
