--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,7 +24,9 @@
 @import url(../blocks/card/__trash/card__trash.css);
 @import url(../blocks/card/__description/card__description.css);
 @import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__counter/card__counter.css);
 @import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__count/card__count.css);
 @import url(../blocks/card/__like/_active/card__like_active.css);
 
 @import url(../blocks/footer/footer.css);
