feature/avatar overlay

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,12 +5,10 @@
         transition: .2s linear;
         object-fit: cover;
         cursor: pointer;
+        background: none;
+        position: absolute;
     }
 
     .profile__avatar:hover {
         opacity: 0.2;
-        background-image: url(../../../images/editAvatar.svg);
-        background-position: 50%;
-        background-repeat: no-repeat;
-        background-size: contain;
     }
