--- a/src/blocks/image-modal/__item/image-modal__item.css
+++ b/src/blocks/image-modal/__item/image-modal__item.css
@@ -1,10 +1,10 @@
-.popup__image {
+.image-modal__item {
     max-width: 75vw;
     max-height: 75vh;
 }
 
 @media screen and (max-width: 321px) {
-    .popup__image {
+    .image-modal__item {
         flex-direction: column;
     }
 }
