--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,8 +1,14 @@
 .popup {
-    max-width: 75vw;
-    max-height: 75vh;
     display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    row-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    transition: .5s ease;
+    z-index: 100;
+    cursor: pointer;
 }
