--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,13 @@
     .profile__avatar {
         max-width: 120px;
-        min-height: 120px;
+        width: 100%;
+        height: 120px;
         border-radius: 50%;
         transition: .2s linear;
-        object-fit: cover;
         cursor: pointer;
-        background: none;
         position: absolute;
+        object-fit: cover;
+        object-position: center;
     }
 
     .profile__avatar:hover {
