--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 .profile{align-items:center;box-sizing:border-box;display:flex;flex-direction:row;justify-content:space-between;margin:36px 0 0;width:100%}@media screen and (max-width:767px){.profile{flex-direction:column;margin-top:42px}}
 .profile__wrapper{align-items:center;box-sizing:border-box;-moz-column-gap:30px;column-gap:30px;display:flex;flex-direction:row;justify-content:space-between}@media screen and (max-width:767px){.profile__wrapper{flex-direction:column;max-width:100%}}
 .profile__avatar-container{align-items:center;display:flex;justify-content:center;min-height:120px;position:relative;width:120px}
-.profile__avatar{background:none;border-radius:50%;cursor:pointer;max-width:120px;min-height:120px;-o-object-fit:cover;object-fit:cover;position:absolute;transition:.2s linear}.profile__avatar:hover{opacity:.2}
+.profile__avatar{border-radius:50%;cursor:pointer;height:120px;max-width:120px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;position:absolute;transition:.2s linear;width:100%}.profile__avatar:hover{opacity:.2}
 .profile__avatar-overlay{position:absolute}
 .profile__info{box-sizing:border-box;display:flex;flex-direction:column;max-width:336px;row-gap:16px}@media screen and (max-width:767px){.profile__info{align-items:center}}
 .profile__text{align-items:flex-end;box-sizing:border-box;-moz-column-gap:18px;column-gap:18px;display:flex;flex-direction:row;justify-content:space-between;max-width:336px}@media screen and (max-width:767px){.profile__text{max-width:282px}}
@@ -27,8 +27,9 @@
 .card__like_active{background-image:url(35948469632d0421d697.svg)}
 .footer{box-sizing:border-box;margin:67px auto 0;max-width:880px;padding:0 0 60px;width:100%}@media screen and (max-width:1279px){.footer{max-width:90%}}@media screen and (max-width:767px){.footer{margin-top:48px;max-width:88%;padding-bottom:36px}}
 .footer__copyrights{color:#545454;font:normal 18px/21px Inter,sans-serif;margin:0}@media screen and (max-width:321px){.footer__copyrights{font-size:14px;line-height:17px}}
-.overlay{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;display:flex;justify-content:center;left:0;opacity:1;position:fixed;right:0;top:0;transition:.5s ease;visibility:visible;z-index:100}
-.overlay_hidden{opacity:0;position:fixed;transition:.5s ease;visibility:hidden}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;display:flex;justify-content:center;left:0;position:fixed;right:0;top:0;transition:.5s ease;z-index:100}
+.popup_opened{opacity:1;visibility:visible}
+.popup_hidden{opacity:0;visibility:hidden}
 .popup-wrapper{align-items:center;-moz-column-gap:8px;column-gap:8px;display:flex;flex-direction:row-reverse;justify-content:center;margin:0 auto;max-height:75vh;max-width:75vw;width:100%;z-index:101}@media screen and (max-width:767px){.popup-wrapper{max-width:330px}}@media screen and (max-width:321px){.popup-wrapper{flex-direction:column;max-width:88%}}
 .popup-wrapper__close{align-self:flex-start;background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;margin:-40px 0 0;min-height:32px;min-width:32px;-o-object-fit:cover;object-fit:cover;transition:.5s ease}.popup-wrapper__close:hover{opacity:.6}@media screen and (max-width:767px){.popup-wrapper__close{min-height:24px;min-width:24px}}@media screen and (max-width:321px){.popup-wrapper__close{margin:0 0 16px auto;min-height:20px;min-width:20px}}
 .form{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;max-width:430px;overflow:hidden;padding:34px 36px;width:100%;z-index:101}@media screen and (max-width:767px){.form{max-width:282px;padding:25px 22px}}
@@ -38,7 +39,7 @@
 .form__submit{align-items:center;background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;display:flex;font:normal 18px/22px Inter,sans-serif;justify-content:center;margin:48px auto 0;padding:14px 0;transition:.5s ease;width:100%}.form__submit:hover{opacity:.8}@media screen and (max-width:767px){.form__submit{font-size:14px;line-height:17px}}
 .form__submit_disabled{background-color:#fff;border:1px solid #000;color:#000;cursor:default;opacity:.2}.form__submit .form__submit_disabled:hover{opacity:.2}
 .popup-wrapper_image{max-width:75vw}
-.popup{box-sizing:border-box;display:flex;flex-direction:column;max-height:75vh;max-width:75vw;row-gap:10px}
-.popup__image{max-height:75vh;max-width:75vw}@media screen and (max-width:321px){.popup__image{flex-direction:column}}
-.popup__title{color:#fff;font:12px/15px Inter,Arial,sans-serif;margin:0;max-width:100%;padding:0}
+.image-modal{box-sizing:border-box;display:flex;flex-direction:column;max-height:75vh;max-width:75vw;row-gap:10px}
+.image-modal__item{max-height:75vh;max-width:75vw}@media screen and (max-width:321px){.image-modal__item{flex-direction:column}}
+.image-modal__title{color:#fff;font:12px/15px Inter,Arial,sans-serif;margin:0;max-width:100%;padding:0}
 
