--- a/main.css
+++ b/main.css
@@ -27,9 +27,8 @@
 .card__like_active{background-image:url(35948469632d0421d697.svg)}
 .footer{box-sizing:border-box;margin:67px auto 0;max-width:880px;padding:0 0 60px;width:100%}@media screen and (max-width:1279px){.footer{max-width:90%}}@media screen and (max-width:767px){.footer{margin-top:48px;max-width:88%;padding-bottom:36px}}
 .footer__copyrights{color:#545454;font:normal 18px/21px Inter,sans-serif;margin:0}@media screen and (max-width:321px){.footer__copyrights{font-size:14px;line-height:17px}}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;display:flex;justify-content:center;left:0;position:fixed;right:0;top:0;transition:.5s ease;z-index:100}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:.5s ease;visibility:hidden;z-index:100}
 .popup_opened{opacity:1;visibility:visible}
-.popup_hidden{opacity:0;visibility:hidden}
 .popup-wrapper{align-items:center;-moz-column-gap:8px;column-gap:8px;display:flex;flex-direction:row-reverse;justify-content:center;margin:0 auto;max-height:75vh;max-width:75vw;width:100%;z-index:101}@media screen and (max-width:767px){.popup-wrapper{max-width:330px}}@media screen and (max-width:321px){.popup-wrapper{flex-direction:column;max-width:88%}}
 .popup-wrapper__close{align-self:flex-start;background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;margin:-40px 0 0;min-height:32px;min-width:32px;-o-object-fit:cover;object-fit:cover;transition:.5s ease}.popup-wrapper__close:hover{opacity:.6}@media screen and (max-width:767px){.popup-wrapper__close{min-height:24px;min-width:24px}}@media screen and (max-width:321px){.popup-wrapper__close{margin:0 0 16px auto;min-height:20px;min-width:20px}}
 .form{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;max-width:430px;overflow:hidden;padding:34px 36px;width:100%;z-index:101}@media screen and (max-width:767px){.form{max-width:282px;padding:25px 22px}}
