--- a/src/blocks/card/__like/card__like.css
+++ b/src/blocks/card/__like/card__like.css
@@ -3,6 +3,7 @@
     width: 100%;
     min-height: 19px;
     background-image: url(../../../images/like.svg);
+    background-repeat: no-repeat;
     transition: .5s ease;
     cursor: pointer;
     border: 0;
