--- a/src/blocks/card/__like/_active/card__like_active.css
+++ b/src/blocks/card/__like/_active/card__like_active.css
@@ -1,4 +1,5 @@
 .card__like_active {
     background-image: url(../../../../images/active-like.svg);
     background-repeat: no-repeat;
+    background-position: center;
 }
