--- a/src/blocks/card/__like/card__like.css
+++ b/src/blocks/card/__like/card__like.css
@@ -4,6 +4,7 @@
     min-height: 19px;
     background-image: url(../../../images/like.svg);
     background-repeat: no-repeat;
+    background-position: center;
     transition: .5s ease;
     cursor: pointer;
     border: 0;
