--- a/main.css
+++ b/main.css
@@ -22,9 +22,9 @@
 .card__description{align-items:center;box-sizing:border-box;display:flex;justify-content:space-between;margin:0 21px}
 .card__title{color:#000;font:900 24px/29px Inter,Arial,sans-serif;max-width:195px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .card__counter{align-items:center;display:flex;flex-direction:column;max-width:22px;width:100%}
-.card__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;border:0;cursor:pointer;max-width:22px;min-height:19px;transition:.5s ease;width:100%}.card__like:hover{opacity:.5}
+.card__like{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;max-width:22px;min-height:19px;transition:.5s ease;width:100%}.card__like:hover{opacity:.5}
 .card__like-count{color:#000;font:13px/16px Inter,Arial,sans-serif;margin:3px 0 0;padding:0}
-.card__like_active{background-image:url(35948469632d0421d697.svg);background-repeat:no-repeat}
+.card__like_active{background-image:url(35948469632d0421d697.svg);background-position:50%;background-repeat:no-repeat}
 .footer{box-sizing:border-box;margin:67px auto 0;max-width:880px;padding:0 0 60px;width:100%}@media screen and (max-width:1279px){.footer{max-width:90%}}@media screen and (max-width:767px){.footer{margin-top:48px;max-width:88%;padding-bottom:36px}}
 .footer__copyrights{color:#545454;font:normal 18px/21px Inter,sans-serif;margin:0}@media screen and (max-width:321px){.footer__copyrights{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:.5s ease;visibility:hidden;z-index:100}
